# Sprit_of_Fire

./: CMakeLists.txt  README.md
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp  shader_program.cpp  shader_program.hpp
src/utils/: file_utils.cpp  file_utils.hpp
